# Memory-allocator

./: CMakeLists.txt  README.md
Allocatore memoria/include/: Allocator.hpp
Allocatore memoria/source/Block/: Block.hpp
source/Allocator/: Allocator.cpp  Allocator.hpp
